prevent textarea from jumping to top of page with scrollheight

--- a/index.css
+++ b/index.css
@@ -18,6 +18,7 @@ textarea {
     resize:none;
     overflow-y:hidden;
     outline:none;
+    position:relative;
 }
 
 textarea:disabled {
